Thu Sep 24 03:50:58 GMT 2015  Olly Betts <olly@survex.com>

	* query.cc: Fix $jsonarray not to prepend ']' to the first array
	  element.

Thu Sep 17 00:28:30 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Fix "make check" compilation failure on platforms
	  without timegm().

Thu Sep 17 00:26:16 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: atomparsetest and htmlparsetest need datetime.cc.

Wed Sep 16 23:43:16 GMT 2015  Olly Betts <olly@survex.com>

	* myhtmlparse.cc: Remove unused header.

Wed Sep 16 23:42:29 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,datetime.cc,datetime.h,metaxmlparse.cc,myhtmlparse.cc:
	  Factor out parse_datetime() function.

Wed Sep 16 20:22:03 GMT 2015  Olly Betts <olly@survex.com>

	* diritor.cc: Avoid magic_descriptor() in libmagic < 5.15 as it
	  closes the fd passed to it.  The magic_descriptor() code path isn't
	  actually used currently, so this issue doesn't cause omindex to
	  misbehave.

Tue Sep 15 22:52:24 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h,omindex.cc: Pass in Document object and
	  string for record so extra data can be added before the file is
	  indexed.

Mon Sep 14 03:15:50 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h,omindex.cc: Move setting of default
	  command filters into index_file.cc.

Mon Sep 14 00:54:36 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,mime.cc,mime.h,omindex.cc: Factor out the code to find
	  a MIME type for a file.

Sat Sep 12 05:22:16 GMT 2015  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Remove bogus '.' from rm command.

Fri Sep 11 04:42:53 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Tweak order of constant definitions.

Fri Sep 11 04:42:27 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h: Factor out index_add_document() function.

Thu Sep 10 20:43:47 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,index_file.cc,index_file.h,omindex.cc: Refactor to start